# mpi_example

./: CMakeLists.txt  README.md  allgather.c  allreduce.c  alltoall.c  barrier.c  broadcast.c  gether.c  reduce.c  reduce_scatter.c  reduce_scatter_block.c  scan.c  scatter.c  split.c
docs/: MPICC.md
